# app/controllers/save_returns_controller.rb
@@ -9,6 +9,7 @@ class SaveReturnsController < ApplicationController
       return render json: {}, status: :ok
     else
       if SaveReturn.create(save_return_hash)
+        SaveAndReturn::ProgressSavedEmailSender.new(email_data_object: email_data_object).call
         return render json: {}, status: :created
       else
         return head :internal_server_error
@@ -41,5 +42,13 @@ class SaveReturnsController < ApplicationController
       encrypted_email: params[:encrypted_email],
       encrypted_payload: params[:encrypted_details]
     }
+  end
+
+  def email_params
+    params.require(:email).permit(:template_name, :to, :subject, :body)
+  end
+
+  def email_data_object
+    @email_data_object ||= DataObject::Email.new(email_params)
   end
 end
